container-kernel: pull source from our git

--- a/hardware/container-kernel-pre/Makefile
+++ b/hardware/container-kernel-pre/Makefile
@@ -1,12 +1,23 @@
 NAME = $(shell basename $(shell pwd))
 TITLE = Container-Kernel (Palm Pre/Pre+)
 DESCRIPTION = Kernel build tree for container related experiments<br>\
-<b>Note that usage of this package is very likely to void your warranty if things go wrong.<b><br>${KERNEL_DISCLAIMER}
+<b>Note that usage of this package is very likely to void your warranty if things go wrong.<b>
 CATEGORY = Experimental
-VERSIONS = 1.4.1-6
+VERSION = 1.4.1-1
+VERSIONS = ${VERSION}
 SCREENSHOTS = 
 
 HOMEPAGE = http://wdtz.org/cs523/
-#SRC_GIT = git://git.webos-internals.org/kernels/patches.git
+KERNEL_GIT = git@wdtz.org:cs523/kernel.git
 
 include ../../support/kernel.mk
+
+#Override some rules
+build/src-%/linux-${KERNEL_VERSION}:
+	mkdir -p build/src-$*
+	git clone $(KERNEL_GIT) build/src-$*/linux-${KERNEL_VERSION} -b palm_lxc
+
+updated-${VERSION}: build/src-${VERSION}/linux-${KERNEL_VERSION}
+	cd build/src-${VERSION} && git pull
+
+build/.unpacked-${VERSION}: updated-${VERSION}
